# nextapi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  readme.md
src/: client.rs  lib.rs  server.rs
